2015-01-12  Andrew Burgess  <andrew.burgess@embecosm.com>

	* define-release.sh: New file.
	* or1k-build-all.sh: New file.
	* or1k-clone-all.sh: New file.

2014-09-15  Simon Cook  <simon.cook@embecosm.com>

	* build-elf.sh: Don't nuke the install directory.

2014-05-26  Simon Cook  <simon.cook@embecosm.com>

	* .gitignore: Added.
	* boards/README: Added.
	* boards/gdb-comm.exp: Add enhanced gdb-comm script.
	* boards/or1k-elf-openocd.exp: Add openocd board description.
	* boards/or1k-elf-sim.exp: Add or1k simulator board description.
	* boards/or32-linux-sim.exp: Add linux board description.
	* build-elf.sh: Add elf toolchain build script.
	* site-openocd.exp: Add openocd site file.
	* site-sim.exp: Add or1k-elf-run site file.