@@ -1,3 +1,10 @@
+2015-01-13  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* or1k-build-all.sh (cd_or_error): New function.
+	(mkdir_or_error): New function.
+	(BODY OF SCRIPT): Replace cd and mkdir with calls to new
+	functions.
+
 2015-01-12  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* define-release.sh: New file.
